--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,8 @@ framework:
 
 # Twig Configuration
 twig:
+    form_themes:
+        - 'bootstrap_3_layout.html.twig'
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
