mise en place du login (sans bdd)

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,14 @@ app:
     resource: "@AppBundle/Resources/config/routing.yml"
     prefix:   /
 
+login:
+    path: /login
+    defaults:
+        _controller: UserBundle:Security:login
+
+login_check:
+    path: /login_check
+
+logout:
+    path: /logout
+
