--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,41 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
+
 security:
 
-    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+
+
+# here we defined the hierarci between the ROLE
+    role_hierarchy:
+        ROLE_ADMIN:       [ROLE_USER, ROLE_MODERATEUR]
+#        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    user: {password: userpassword, roles: [ROLE_USER]}
+     #   main:
+     #       entity:
+     #           class:    UserBundle:User
+     #           property: username
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            pattern:        ^/
+            anonymous:      true
+            provider:       in_memory
+            form_login:
+                login_path: login
+                check_path: login_check
+            logout:
+                path:       logout
+                target:     /
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
