--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,14 +2,26 @@ app:
     resource: "@AppBundle/Resources/config/routing.yml"
     prefix:   /
 
-login:
-    path: /login
-    defaults:
-        _controller: UserBundle:Security:login
 
-login_check:
-    path: /login_check
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
-logout:
-    path: /logout
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
 
