--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@
 security:
 
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        UserBundle\Entity\User: sha512
 
 
 # here we defined the hierarci between the ROLE
@@ -13,14 +13,8 @@ security:
 #        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user: {password: userpassword, roles: [ROLE_USER]}
-     #   main:
-     #       entity:
-     #           class:    UserBundle:User
-     #           property: username
+        main:
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
@@ -30,12 +24,14 @@ security:
         main:
             pattern:        ^/
             anonymous:      true
-            provider:       in_memory
+            provider:       main
             form_login:
-                login_path: login
-                check_path: login_check
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
             logout:
                 path:       logout
                 target:     /
+            remember_me:
+                secret:     %secret%
 
     access_control:
