--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,7 +12,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -75,3 +75,6 @@ fos_user:
     db_driver:     orm
     firewall_name: main
     user_class:   UserBundle\Entity\User
+    registration:
+        form:
+            type: UserBundle\Form\RegistrationType
