--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,7 +29,7 @@ security:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
             logout:
-                path:       logout
+                path:       fos_user_security_logout
                 target:     /
             remember_me:
                 secret:     %secret%
