Updated production config

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ fabric.properties
 !var/sessions/.gitkeep
 
 # Parameters
+/app/config/parameters.yml
 /app/config/parameters.ini
 
 # Managed by Composer
